# timeplex

./: README.md
backend/: pyproject.toml
frontend/timetable-generator/: package-lock.json  package.json
